Added LIBERO submodule and updated git files

--- a/.gitignore
+++ b/.gitignore
@@ -152,3 +152,9 @@ dmypy.json
 # Caches and Datasets
 cache/
 data/
+
+# Models
+univla-7b-224-sft-libero
+
+# Rollout files
+experiments/robot/libero/rollouts/*
